Improvements to Warship Import

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
 <div>
-  <h1>
-    Warship Search
-  </h1>
+  <div class="header">
+    <div class="title">
+      <h1>Combat Warships</h1>
+    </div>
+    <div></div>
+    <div class="navLink"><a href=".">Home</a></div>
+    <div class="navLink"><a href=".">Warship Search</a></div>
+
+  </div>
+
   <router-outlet></router-outlet>
 </div>
