--- a/src/app/ship-search/ship-detail/ship-detail.component.html
+++ b/src/app/ship-search/ship-detail/ship-detail.component.html
@@ -1,14 +1,24 @@
-<tr>Ship Class: {{ ship?.className }} </tr>
-<tr>Nationality: {{ ship?.nation | lowercase}}</tr>
-<tr>Class Abbreviation: {{ ship?.classAbbreviation }}</tr>
-<tr>Units: {{ ship?.units}}</tr>
-<tr>IRCWCC Speed: {{ ship?.speedIrcwcc}}</tr>
-<tr>Speed (Knots): {{ ship?.speedKnots}}</tr>
-<tr>Length: {{ ship?.length}} ft</tr>
-<tr>Beam: {{ ship?.beam}} ft</tr>
-<tr>Standard Tonnage: {{ ship?.standardWeight}} Tons</tr>
-<tr>Total Guns: {{ ship?.guns}}</tr>
-<tr>Maximum Gun Diameter: {{ ship?.gunDiameter}}</tr>
-<tr>Belt Armor Thickness:{{ ship?.armor}}</tr>
-<tr>Number of Rudders: {{ ship?.rudders}}</tr>
-<tr>Number of Shafts: {{ ship?.shafts}}</tr>
+
+<h1>Ship Class: {{ ship?.className }} </h1>
+
+<div style="width:50%;float:left">
+
+  <tr>Nationality: {{ ship?.nation | lowercase}}</tr>
+  <tr>Class Abbreviation: {{ ship?.classAbbreviation }}</tr>
+  <tr>Units: {{ ship?.units}}</tr>
+  <tr>IRCWCC Speed: {{ ship?.speedIrcwcc}}</tr>
+  <tr>Speed (Knots): {{ ship?.speedKnots}}</tr>
+
+</div>
+<div style="width:50%; float:right">
+
+  <tr>Length: {{ ship?.length}} ft</tr>
+  <tr>Beam: {{ ship?.beam}} ft</tr>
+  <tr>Standard Tonnage: {{ ship?.standardWeight}} Tons</tr>
+  <tr>Total Guns: {{ ship?.guns}}</tr>
+  <tr>Maximum Gun Diameter: {{ ship?.gunDiameter}}</tr>
+  <tr>Belt Armor Thickness:{{ ship?.armor}}</tr>
+  <tr>Number of Rudders: {{ ship?.rudders}}</tr>
+  <tr>Number of Shafts: {{ ship?.shafts}}</tr>
+
+</div>
