--- a/src/app/ship-search/ship-search.component.css
+++ b/src/app/ship-search/ship-search.component.css
@@ -1,40 +1,14 @@
-th {
-  color: #337AB7;
-}
-
 /* The side navigation menu */
 .sidebar {
   margin: 0;
   padding: 0;
   width: 300px;
-  background-color: #f1f1f1;
   position: fixed;
   height: 100%;
   overflow: auto;
 }
-
-/* Sidebar links */
-.sidebar a {
-  display: block;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-}
-
-/* Active/current link */
-.sidebar a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-/* Links on mouse-over */
-.sidebar a:hover:not(.active) {
-  background-color: #555;
-  color: white;
-}
-
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-div.content {
+.content {
   margin-left: 300px;
   padding: 1px 16px;
   height: 1000px;
