--- a/src/app/app.style.small.css
+++ b/src/app/app.style.small.css
@@ -87,12 +87,12 @@ button#hamburgerBtn {
 }
 
 nav {
-  background-color: var(--secondary);
+  background-color: var(--highlight);
 }
 
   nav ul {
     margin: 0;
-    padding: 0;
+    padding: 0;    
   }
 
   nav li {
