--- a/src/app/Styles/style.small.scss
+++ b/src/app/Styles/style.small.scss
@@ -1,25 +1,4 @@
-
-:host {
-  --primary: #222D3D;
-  --secondary: #558c8c;
-  --tertiary: #f3f9d2;
-  --dark: #14181f;
-  --highlight: #931621;
-  --bright: white;
-}
-
-
-html {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
+@import "style.variables.scss";
 
 body {
   font-family: 'Lato', sans-serif;
@@ -27,132 +6,101 @@ body {
   font-weight: 300;
 }
 
-/* GRID */
-.row {
-  clear: both;
-}
-
 .limited {
   max-width: 1140px;
   margin: auto;
 }
 
-.column {
-  float: left;
-  padding: 0 2vw;
-  margin: 0 0 .75rem 0;
-}
-
-.small-12 {
-  width: 100%;
-}
-
 /* header rules */
 header {
-  background-color: var(--primary);
-}
+  background-color: $colorPrimary;
 
-  header img {
+  img {
     float: left;
     height: 85px;
     padding-right: 10px;
   }
 
-  header h1, header h2 {
+  h1, h2 {
     margin: 0;
-    color: var(--bright);
+    color: $colorBright;
     font-weight: 300;
     font-style: italic;
   }
 
-  header h1 {
+  h1 {
     padding: .5rem 0 0 0;
     font-size: 1.95rem;
   }
 
-  header h2 {
+  h2 {
     padding: .2rem 0 0 0;
     font-size: 1.05rem;
   }
+}
 
 
 /* navigation rules */
 button#hamburgerBtn {
   background: none;
   border: none;
-  color: var(--bright);
+  color: $colorBright;
   font-size: 2.4rem;
   cursor: pointer;
   padding: 0 30px 0 2vw;
 }
 
 nav {
-  background-color: var(--highlight);
-}
+  background-color: $colorHighlight;
 
-  nav ul {
+  ul {
     margin: 0;
-    padding: 0;    
+    padding: 0;
   }
 
-  nav li {
+  li {
     list-style-type: none;
   }
 
-  nav a {
+  a {
     display: block;
     padding: .8rem 0;
-    color: var(--bright);
+    color: $colorBright;
     text-align: center;
     text-decoration: none;
   }
 
-  nav li.active {
+  li.active {
     background-color: rgba(0,0,0,0.5);
   }
 
-  nav a:hover {
+  a:hover {
     background-color: rgba(0,0,0,0.2);
   }
 
-  nav ul.open {
+  ul.open {
     display: block;
   }
 
-  nav ul {
+  ul {
     display: none;
   }
-
-main {
-  background-color: var(--bright)
 }
 
 
 
-
-
-
-
-
-
-
+main {
+  background-color: $colorBright;
+}
 
 
 footer {
-  background-color: #9b87b8;
+  background-color: $colorPrimary;
   font-size: 1.2rem;
-}
 
-  footer h2 {
+  h2 {
     font-style: italic;
     text-transform: uppercase;
     margin: 1rem 0 .3rem 0;
   }
-
-
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
 }
