--- a/src/app/Styles/style.medium.scss
+++ b/src/app/Styles/style.medium.scss
@@ -12,7 +12,7 @@ header img {
 }
 
 
-nav button {
+/*nav button {
   display: none;
 }
 
@@ -24,3 +24,4 @@ nav li {
   width: 33%;
   float: left;
 }
+*/
