--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row ">
       <div class="col">
 
@@ -11,34 +11,34 @@
   </div>
 </header>
 
-<nav>
-  <div class="container">
-    <div class="row ">
-      <div class="col">
-        <button id="hamburgerBtn">&#9776;</button>
-        <ul id="primaryNav">
-          <li class="active"><a href=".">Home</a></li>
-          <li><a href="./ship-search">Warship Search</a></li>
-          <li><a href="./ship-import">Create Warship</a></li>
-        </ul>
-      </div>
-    </div>
+<nav class="navbar navbar-expand-lg">
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./ship-search">Warship Search</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./ship-import">Create Warship</a>
+      </li>
+    </ul>
   </div>
 </nav>
 
 <main>
-  <div class="container">
-    <div class="row">
-      <section class="col">
-        <router-outlet></router-outlet>
-      </section>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </main>
 
-
 <footer>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row "></div>
   </div>
 </footer>
