--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,13 +20,13 @@
 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li [class]="GetLinkStyle('.')">
         <a class="nav-link" href="#">Home</a>
       </li>
-      <li class="nav-item">
+      <li [class]="GetLinkStyle('ship-search')">
         <a class="nav-link" href="./ship-search">Warship Search</a>
       </li>
-      <li class="nav-item">
+      <li [class]="GetLinkStyle('ship-import')">
         <a class="nav-link" href="./ship-import">Create Warship</a>
       </li>
     </ul>
