improvements to nav bar position

--- a/src/app/Styles/style.small.scss
+++ b/src/app/Styles/style.small.scss
@@ -51,7 +51,8 @@ button#hamburgerBtn {
 }
 
 nav {
-  background-color: $colorHighlight;
+  text-align: right;
+  float: right;
 
   a {
     display: block;
