--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,40 @@
 <header>
   <div class="container-fluid">
-    <div class="row ">
+    <div class="row">
+
       <div class="col">
 
         <!--<img src="images/logo.svg" alt="Combat Warships">-->
         <h1>Combat Warships</h1>
         <h2>R/C Naval Battles</h2>
       </div>
+
+      <div class="col">
+        <nav class="navbar navbar-expand-md">
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li [class]="GetLinkStyle('.')">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li [class]="GetLinkStyle('ship-search')">
+                <a class="nav-link" href="./ship-search">Warship Search</a>
+              </li>
+              <li [class]="GetLinkStyle('ship-import')">
+                <a class="nav-link" href="./ship-import">Create Warship</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </div>
   </div>
 </header>
-
-<nav class="navbar navbar-expand-lg">
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li [class]="GetLinkStyle('.')">
-        <a class="nav-link" href="#">Home</a>
-      </li>
-      <li [class]="GetLinkStyle('ship-search')">
-        <a class="nav-link" href="./ship-search">Warship Search</a>
-      </li>
-      <li [class]="GetLinkStyle('ship-import')">
-        <a class="nav-link" href="./ship-import">Create Warship</a>
-      </li>
-    </ul>
-  </div>
-</nav>
 
 <main>
   <router-outlet></router-outlet>
