New Proposed Warships screens!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,8 +25,8 @@
               <li [class]="GetLinkStyle('ship-search')">
                 <a class="nav-link" href="./ship-search">Warship Search</a>
               </li>
-              <li [class]="GetLinkStyle('ship-import')">
-                <a class="nav-link" href="./ship-import">Create Warship</a>
+              <li [class]="GetLinkStyle('proposed-ships')">
+                <a class="nav-link" href="./proposed-ships">Create Warship</a>
               </li>
             </ul>
           </div>
