--- a/src/app/proposed-ships/proposed-ships.component.html
+++ b/src/app/proposed-ships/proposed-ships.component.html
@@ -4,17 +4,20 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Proposed Warships</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/add-proposedShip']">Add New Ship</a>
+              <button class="nav-link" [routerLink]="['/add-proposedShip']">Add New Ship</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Delete Ship</a>
+              <button type="button" class="nav-link" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">Delete Ship</button>
+
             </li>
           </ul>
         </div>
@@ -31,6 +34,7 @@
       </thead>
       <tbody>
         <tr *ngFor='let ship of warships'>
+          <td><input type="checkbox" [(ngModel)]="ship.isChecked"></td>
           <td><a [routerLink]="['/proposed-ships', ship.id]"> {{ ship.className | titlecase }} </a></td>
           <td>{{ ship.nation | titlecase }}</td>
           <td>date</td>
@@ -40,4 +44,23 @@
 
   </div>
 
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this ship?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="onDeleteShip()" data-bs-dismiss="modal">Delete</button>
+      </div>
+    </div>
+  </div>
 </div>
