--- a/src/app/ship-search/ship-detail/ship-detail.component.html
+++ b/src/app/ship-search/ship-detail/ship-detail.component.html
@@ -11,8 +11,8 @@
 </div>
 <div style="width:50%; float:right">
 
-  <tr>Length: {{ ship?.length}} ft</tr>
-  <tr>Beam: {{ ship?.beam}} ft</tr>
+  <tr>Length: {{ ship?.lengthFt}} ft</tr>
+  <tr>Beam: {{ ship?.beamFt}} ft</tr>
   <tr>Standard Tonnage: {{ ship?.standardWeight}} Tons</tr>
   <tr>Total Guns: {{ ship?.guns}}</tr>
   <tr>Maximum Gun Diameter: {{ ship?.gunDiameter}}</tr>
