--- a/src/app/ship-search/ship-search.component.html
+++ b/src/app/ship-search/ship-search.component.html
@@ -35,8 +35,8 @@
                 <td>{{ ship.units}}</td>
                 <td>{{ ship.speedIrcwcc}}</td>
                 <td>{{ ship.speedKnots}}</td>
-                <td>{{ ship.length}}</td>
-                <td>{{ ship.beam}}</td>
+                <td>{{ ship.lengthFt}}</td>
+                <td>{{ ship.beamFt}}</td>
                 <td>{{ ship.standardWeight}}</td>
                 <td>{{ ship.guns}}</td>
                 <td>{{ ship.gunDiameter}}</td>
