--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,32 +3,27 @@
     <div class="row">
 
       <div class="col">
-
         <!--<img src="images/logo.svg" alt="Combat Warships">-->
         <h1>Combat Warships</h1>
         <h2>R/C Naval Battles</h2>
       </div>
 
-      <div class="col">
-        <nav class="navbar navbar-expand-md">
+      <div class="col-12 col-lg-6">
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li [class]="GetLinkStyle('.')">
-                <a class="nav-link" href="#">Home</a>
-              </li>
-              <li [class]="GetLinkStyle('ship-search')">
-                <a class="nav-link" href="./ship-search">Warship Search</a>
-              </li>
-              <li [class]="GetLinkStyle('proposed-ships')">
-                <a class="nav-link" href="./proposed-ships">Create Warship</a>
-              </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                    aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a [class]="GetLinkStyle('.')" aria-current="page" href="#">Home</a>
+                <a [class]="GetLinkStyle('ship-search')" href="./ship-search">Warship Search</a>
+                <a [class]="GetLinkStyle('proposed-ships')" href="./proposed-ships">Warship Proposals</a>
+              </div>
+            </div>
           </div>
         </nav>
       </div>
@@ -36,12 +31,14 @@
   </div>
 </header>
 
-<main>
-  <router-outlet></router-outlet>
-</main>
 
-<footer>
-  <div class="container-fluid">
-    <div class="row "></div>
-  </div>
-</footer>
+
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+
+  <footer>
+    <div class="container-fluid">
+      <div class="row "></div>
+    </div>
+  </footer>
