--- a/src/app/proposed-ships/edit-proposed-ships/edit-proposed-ships.component.html
+++ b/src/app/proposed-ships/edit-proposed-ships/edit-proposed-ships.component.html
@@ -29,59 +29,47 @@
       </div>
 
 
-      <div class="row">
-        <div class="col-12 col-md-6">
+      <div *ngFor='let prop of shipProperties'>
 
-          <div *ngFor='let prop of shipProperties'>
+        <div class="row">
 
+          <div class="col">
             <label for="{{prop.field}}">{{prop.display}}</label>
+          </div>
+        </div>
 
-            <div class="d-flex align-content-stretch">
+        <div class="row">
 
-              <div class="p-2 flex-grow-1 input-group mb-3">
-                <input class="{{prop.controlType}}"
-                       id="{{prop.field}}"
-                       name="{{prop.field}}"
+          <div class="col">
+
+            <div *ngIf="prop.controlType == 'form-control'">
+              <div class="input-group">
+                <input class="form-control"
+                       id="{{prop.field}}" name="{{prop.field}}"
                        formControlName="{{prop.field}}" />
                 <span *ngIf="prop.units" class="input-group-text" id="{{prop.field}}-addon">{{prop.units}}</span>
               </div>
-
-              <div class="p-2 flex-grow-1">
-                <button *ngIf="showValue(ircwccShip, wikiShip, prop.field)" class="stretch" (click)="changeValue(ircwccShip, prop.field)">{{getValue(ircwccShip,prop.field)}}</button>
-              </div>
-
-              <div class="p-2" flex-grow-1>
-                <button *ngIf="showValue(wikiShip, ircwccShip, prop.field)" class="stretch" (click)="changeValue(wikiShip, prop.field)">{{getValue(wikiShip, prop.field)}}</button>
-              </div>
-
             </div>
 
+            <div *ngIf="prop.controlType == 'form-select'">
+              <select class="form-select"
+                      id="{{prop.field}}" name="{{prop.field}}"
+                      formControlName="{{prop.field}}">
+                <option *ngFor='let option of prop.options | async' value="{{option.value}}">{{option.display}}</option>
+              </select>
+            </div>
 
+          </div> 
 
+          <div class="col-4" *ngIf="showValue(wikiShip, ircwccShip, prop.field)" style="background-color: red">
+            <button class="stretch" (click)="changeValue(wikiShip, prop.field)">{{getValue(wikiShip, prop.field)}} {{prop.units}}</button>
           </div>
-        </div>
-      </div>
 
-
-
-
-      <div class="row">
-        <div class="col-12 col-md-6">
-
-
-          <label for="classType">Class Type</label>
-          <select class="form-select" aria-label="Default select example"
-                  id="classType" name="classType" formControlName="classType">
-            <option selected>Open this select menu</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-
-          </select>
-
+          <div class="col-4" *ngIf="showValue(ircwccShip, wikiShip, prop.field)" style="background-color: green">
+            <button class="stretch" (click)="changeValue(ircwccShip, prop.field)">{{getValue(ircwccShip,prop.field)}} {{prop.units}}</button>
+          </div>
 
         </div>
-
       </div>
 
       <div class="row">
