--- a/src/app/proposed-ships/proposed-ships.component.html
+++ b/src/app/proposed-ships/proposed-ships.component.html
@@ -12,6 +12,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
+              <button class="nav-link" (click)="importIrcwccShipList()">Import IRCWCC Ship List</button>
+            </li>
+            <li class="nav-item">
               <button class="nav-link" [routerLink]="['/add-proposedShip']">Add New Ship</button>
             </li>
             <li class="nav-item">
