--- a/src/app/ship-search/query-editor/query-editor.component.html
+++ b/src/app/ship-search/query-editor/query-editor.component.html
@@ -1,105 +1,141 @@
 <form [formGroup]="queryForm">
-       <div class="form-group">
-              <label for="classname">Class Name</label>
-              <input class="form-control"
-                     id="classname"
-                     name="classname"
-                     formControlName="className" />
+  <div class="form-group">
+    <label for="classname">Class Name</label>
+    <input class="form-control"
+           id="classname"
+           name="classname"
+           formControlName="className" />
 
-              <label for="nation">Nationality</label>
-              <input id="nation"
-                     name="nation"
-                     class="form-control"
-                     formControlName="nation" />
+    <label for="nation">Nationality</label>
+    <input id="nation"
+           name="nation"
+           class="form-control"
+           formControlName="nation" />
 
-              <label for="minUnits">Minumum Units: {{queryForm.value.minUnits}}</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minUnits}}
-                     max={{queryRange.maxUnits}}
-                     step="0.5"
-                     id="minUnits"
-                     formControlName="minUnits" />
+    <label for="minUnits">Minumum Units: {{queryForm.value.minUnits}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minUnits}}
+           max={{queryRange.maxUnits}}
+           step="0.5"
+           id="minUnits"
+           formControlName="minUnits" />
 
-              <label for="maxUnits">Maximum Units: {{queryForm.value.maxUnits}}</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minUnits}}
-                     max={{queryRange.maxUnits}}
-                     step="0.5"
-                     id="maxUnits"
-                     formControlName="maxUnits" />
+    <label for="maxUnits">Maximum Units: {{queryForm.value.maxUnits}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minUnits}}
+           max={{queryRange.maxUnits}}
+           step="0.5"
+           id="maxUnits"
+           formControlName="maxUnits" />
 
-              <label for="maxIrcSpeed">Slowest IRCWCC Speed: {{queryForm.value.maxSpeedIrcwcc}}</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minSpeedIrcwcc}}
-                     max={{queryRange.maxSpeedIrcwcc}}
-                     step="1"
-                     id="maxIrcSpeed"
-                     formControlName="maxSpeedIrcwcc" />
+    <label for="maxIrcSpeed">Slowest IRCWCC Speed: {{queryForm.value.maxSpeedIrcwcc}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minSpeedIrcwcc}}
+           max={{queryRange.maxSpeedIrcwcc}}
+           step="1"
+           id="maxIrcSpeed"
+           formControlName="maxSpeedIrcwcc" />
 
-              <label for="minIrcSpeed">Fastest IRCWCC Speed: {{queryForm.value.minSpeedIrcwcc}}</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minSpeedIrcwcc}}
-                     max={{queryRange.maxSpeedIrcwcc}}
-                     step="1"
-                     id="minIrcSpeed"
-                     formControlName="minSpeedIrcwcc" />
+    <label for="minIrcSpeed">Fastest IRCWCC Speed: {{queryForm.value.minSpeedIrcwcc}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minSpeedIrcwcc}}
+           max={{queryRange.maxSpeedIrcwcc}}
+           step="1"
+           id="minIrcSpeed"
+           formControlName="minSpeedIrcwcc" />
 
-              <label for="minSpeed">Slowest Speed: {{queryForm.value.minSpeedKnots}} Knots</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minSpeedKnots}}
-                     max={{queryRange.maxSpeedKnots}}
-                     step="1"
-                     id="minSpeed"
-                     formControlName="minSpeedKnots" />
+    <label for="minSpeed">Slowest Speed: {{queryForm.value.minSpeedKnots}} Knots</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minSpeedKnots}}
+           max={{queryRange.maxSpeedKnots}}
+           step="1"
+           id="minSpeed"
+           formControlName="minSpeedKnots" />
 
-              <label for="maxSpeed">Fastest Speed: {{queryForm.value.maxSpeedKnots}} Knots</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minSpeedKnots}}
-                     max={{queryRange.maxSpeedKnots}}
-                     step="1"
-                     id="maxSpeed"
-                     formControlName="maxSpeedKnots" />
+    <label for="maxSpeed">Fastest Speed: {{queryForm.value.maxSpeedKnots}} Knots</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minSpeedKnots}}
+           max={{queryRange.maxSpeedKnots}}
+           step="1"
+           id="maxSpeed"
+           formControlName="maxSpeedKnots" />
 
-              <label for="minLength">Minumum Length: {{queryForm.value.minLength}}</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minLength}}
-                     max={{queryRange.maxLength}}
-                     step="50"
-                     id="minLength"
-                     formControlName="minLength" />
+    <label for="minLength">Minumum Length: {{queryForm.value.minLength}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minLength}}
+           max={{queryRange.maxLength}}
+           step="25"
+           id="minLength"
+           formControlName="minLength" />
 
-              <label for="maxLength">Maxiumum Length: {{queryForm.value.maxLength}}</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minLength}}
-                     max={{queryRange.maxLength}}
-                     step="50"
-                     id="maxLength"
-                     formControlName="maxLength" />
+    <label for="maxLength">Maxiumum Length: {{queryForm.value.maxLength}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minLength}}
+           max={{queryRange.maxLength}}
+           step="25"
+           id="maxLength"
+           formControlName="maxLength" />
 
-              <label for="minBeam">Minumum Beam: {{queryForm.value.minBeam}}</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minBeam}}
-                     max={{queryRange.maxBeam}}
-                     step="10"
-                     id="minBeam"
-                     formControlName="minBeam" />
+    <label for="minBeam">Minumum Beam: {{queryForm.value.minBeam}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minBeam}}
+           max={{queryRange.maxBeam}}
+           step="10"
+           id="minBeam"
+           formControlName="minBeam" />
 
-              <label for="maxBeam">Maxiumum Beam: {{queryForm.value.maxBeam}}</label>
-              <input type="range"
-                     class="form-range"
-                     min={{queryRange.minBeam}}
-                     max={{queryRange.maxBeam}}
-                     step="10"
-                     id="maxBeam"
-                     formControlName="maxBeam" />
-       </div>
+    <label for="maxBeam">Maxiumum Beam: {{queryForm.value.maxBeam}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minBeam}}
+           max={{queryRange.maxBeam}}
+           step="10"
+           id="maxBeam"
+           formControlName="maxBeam" />
+
+    <label for="rudders">Minumum Rudders: {{queryForm.value.minRudders}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minRudders}}
+           max={{queryRange.maxRudders}}
+           step="1"
+           id="minRudders"
+           formControlName="minRudders" />
+
+    <label for="maxRudders">Maximum Rudders: {{queryForm.value.maxRudders}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minRudders}}
+           max={{queryRange.maxRudders}}
+           step="1"
+           id="maxRudders"
+           formControlName="maxRudders" />
+
+    <label for="minShafts">Minimum Shafts: {{queryForm.value.minShafts}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minShafts}}
+           max={{queryRange.maxShafts}}
+           step="1"
+           id="minShafts"
+           formControlName="minShafts" />
+
+    <label for="maxShafts">Maximum Shafts: {{queryForm.value.maxShafts}}</label>
+    <input type="range"
+           class="form-range"
+           min={{queryRange.minShafts}}
+           max={{queryRange.maxShafts}}
+           step="1"
+           id="maxShafts"
+           formControlName="maxShafts" />
+  </div>
 </form>
